test/regress/regress-11.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func (result i32)
    block (result i32)
      block
        unreachable
        br_if 1
      end
      i32.const 1
    end))
(;; STDERR ;;;
out/test/regress/regress-11.txt:8:9: error: type mismatch in block, expected [] but got [i32]
        br_if 1
        ^^^^^
;;; STDERR ;;)
